<resources>
    <string name="app_name">WeatherChallenge</string>
    <string name="city_name">CountryName</string>
    <string name="city_title">Title</string>
    <string name="details">Details</string>
    <string name="city_max">Max Temp: </string>
    <string name="city_min">Min Temp: </string>
    <string name="feels_like">Feels Like: </string>
    <string name="city_temp">Temperature: </string>
    <string name="temp_signal"> ºc</string>
    <string name="temp_mask">0ºc</string>
    <string name="city_country">Country: </string>
    <string name="current_location">Current Location</string>
    <string name="Brasil">Brasil</string>
    <string name="error_api">Sorry, couldn\'t get city from location</string>

</resources>